# market_simulator

./: .gitignore  Cargo.toml  README.MD  analysis.ipynb  clippy.txt  criterion_pdf.py  mods.dot
.github/workflows/: rust.yml
benches/: order_book.rs  order_book_enhanced.rs
benchmark_results/: comprehensive_benchmark_results.csv  limit_order_insertion_results.csv  market_order_scaling_results.csv  mixed_book_operations_results.csv  negative_inventory_simulation_results.csv  order_cancellation_results.csv  price_level_scaling_results.csv  short_covering_results.csv
src/: lib.rs  market.rs  sentiment.rs  shared_types.rs
src/agents/: agent_trait.rs  agent_type.rs  config.rs  dumb_agent.rs  dumb_limit_agent.rs  ipo_agent.rs  latency.rs  market_maker_agent.rs  mod.rs  whale_agent.rs
src/pricing/: black_scholes.rs  mod.rs
src/simulators/: gbm.rs  market_trait.rs  mod.rs  order_book.rs  placeholder
src/stocks/: definitions.rs  defintions.rs  mod.rs  registry.rs
src/types/: mod.rs  order.rs
